databse start saving data

--- a/FrontEnd/SignUp/signup.html
+++ b/FrontEnd/SignUp/signup.html
@@ -13,7 +13,7 @@
     <main class="main">
         <div class="form-container">
         <h1>Instagram SignUp</h1>
-                <form action="http://localhost:8000/signup" method="POST">
+                <form>
                     <label for="name">Name: </label>
                     <br>
                     <input id="name" type="text" placeholder="Enter your name">
