--- a/FrontEnd/SignIn/signin.html
+++ b/FrontEnd/SignIn/signin.html
@@ -17,12 +17,12 @@
                 <form>
                     <label for="username">Username: </label>
                     <br>
-                    <input type="text" placeholder="Enter username">
+                    <input id="username" type="text" placeholder="Enter username">
                     <label for="password">Password: </label>
                     <br>
-                    <input type="password" placeholder="Enter password">
+                    <input id="password" type="password" placeholder="Enter password">
                 </form>
-                <button>Sign In</button>
+                <button id="submit">Sign In</button>
                 <div class="links">
                     <a href="#">Forget Password ?</a>
                     <a href="../SignUp/signup.html">Create Account</a>
