--- a/FrontEnd/SignIn/signin.html
+++ b/FrontEnd/SignIn/signin.html
@@ -15,9 +15,9 @@
         <div class="form-container">
         <h1>Instagram SignIn</h1>
                 <form>
-                    <label for="username">Username: </label>
+                    <label for="email">Email: </label>
                     <br>
-                    <input id="username" type="text" placeholder="Enter username">
+                    <input id="email" type="text" placeholder="Enter username">
                     <label for="password">Password: </label>
                     <br>
                     <input id="password" type="password" placeholder="Enter password">
