--- a/FrontEnd/UserInfo/index.html
+++ b/FrontEnd/UserInfo/index.html
@@ -18,6 +18,6 @@
         <p id="email" class="email">Useremail</p>
         <p class="followers">Followers: 1000</p>                
     </main>
-    <!-- <script src="./script.js"></script> -->
+    <script src="./script.js"></script>
 </body>
 </html>
