--- a/FrontEnd/UserInfo/index.html
+++ b/FrontEnd/UserInfo/index.html
@@ -13,9 +13,9 @@
 <body>
     <main class="main">
         <img src="https://www.simplilearn.com/ice9/free_resources_article_thumb/what_is_image_Processing.jpg" alt="user_img">
-        <h2 id="username" class="username">@Username</h2>
-        <p id="userbio" class="userbio">User Bio</p>
-        <p id="email" class="email">Useremail</p>
+        <h2 id="username">@Username</h2>
+        <p id="userbio">User Bio</p>
+        <p id="email">Useremail</p>
         <p class="followers">Followers: 1000</p>                
     </main>
     <script src="./script.js"></script>
